// Vitest Snapshot v1

exports[`AddDraftAction > add already open Foo 1`] = `
{
  "activeEntityEditorScrollSignal": 2,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 2,
  "drafts": [
    {
      "draft": {
        "authKey": "none",
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": null,
            "status": "",
            "validationErrors": [],
            "value": null,
          },
        ],
        "name": "Foo",
        "nameIsLinkedToField": false,
      },
      "entity": {
        "fields": {
          "foo": null,
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": {
          "authKey": "none",
          "createdAt": 2022-04-30T07:51:25.560Z,
          "name": "Foo",
          "status": "draft",
          "type": "Foo",
          "updatedAt": 2022-05-01T07:51:25.560Z,
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "",
}
`;

exports[`AddDraftAction > add new Foo 1`] = `
{
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": [
    {
      "draft": {
        "authKey": null,
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": null,
            "status": "",
            "validationErrors": [],
            "value": null,
          },
        ],
        "name": "",
        "nameIsLinkedToField": true,
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "",
}
`;

exports[`DeleteDraftAction > add/delete Foo 1`] = `
{
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": null,
  "activeEntityMenuScrollSignal": 1,
  "drafts": [],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios > add new draft, set name and authKey, force update 1`] = `
{
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": [
    {
      "draft": {
        "authKey": null,
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": null,
            "status": "",
            "validationErrors": [],
            "value": null,
          },
        ],
        "name": "",
        "nameIsLinkedToField": true,
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios > add new draft, set name and authKey, force update 2`] = `
{
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": [
    {
      "draft": {
        "authKey": null,
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": null,
            "status": "",
            "validationErrors": [],
            "value": null,
          },
        ],
        "name": "Foo name",
        "nameIsLinkedToField": false,
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "changed",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "changed",
}
`;

exports[`EntityEditorReducer scenarios > add new draft, set name and authKey, force update 3`] = `
{
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": [
    {
      "draft": {
        "authKey": "none",
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": null,
            "status": "",
            "validationErrors": [],
            "value": null,
          },
        ],
        "name": "Foo name",
        "nameIsLinkedToField": false,
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "changed",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "changed",
}
`;

exports[`EntityEditorReducer scenarios > add new draft, set name and authKey, force update 4`] = `
{
  "fields": {
    "title": null,
  },
  "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "info": {
    "authKey": "none",
    "name": "Foo name",
    "type": "Foo",
  },
}
`;

exports[`EntityEditorReducer scenarios > add new draft, set name and authKey, force update 5`] = `
{
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": [
    {
      "draft": {
        "authKey": "none",
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": null,
            "status": "",
            "validationErrors": [],
            "value": null,
          },
        ],
        "name": "Foo name",
        "nameIsLinkedToField": false,
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": true,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "changed",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "changed",
}
`;

exports[`EntityEditorReducer scenarios > add new draft, set name and authKey, force update 6`] = `
{
  "activeEntityEditorScrollSignal": 2,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 2,
  "drafts": [
    {
      "draft": {
        "authKey": "none",
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": null,
            "status": "",
            "validationErrors": [],
            "value": null,
          },
        ],
        "name": "Foo name#123456",
        "nameIsLinkedToField": false,
      },
      "entity": {
        "fields": {
          "title": null,
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": {
          "authKey": "none",
          "createdAt": 2022-04-30T07:51:25.560Z,
          "name": "Foo name#123456",
          "status": "draft",
          "type": "Foo",
          "updatedAt": 2022-04-30T07:51:25.560Z,
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": true,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios > add new draft, set name, authKey and title, simulate save 1`] = `
{
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": [
    {
      "draft": {
        "authKey": null,
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": null,
            "status": "",
            "validationErrors": [],
            "value": null,
          },
        ],
        "name": "",
        "nameIsLinkedToField": true,
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios > add new draft, set name, authKey and title, simulate save 2`] = `
{
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": [
    {
      "draft": {
        "authKey": null,
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": null,
            "status": "",
            "validationErrors": [],
            "value": null,
          },
        ],
        "name": "Foo name",
        "nameIsLinkedToField": false,
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "changed",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "changed",
}
`;

exports[`EntityEditorReducer scenarios > add new draft, set name, authKey and title, simulate save 3`] = `
{
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": [
    {
      "draft": {
        "authKey": "none",
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": null,
            "status": "",
            "validationErrors": [],
            "value": null,
          },
        ],
        "name": "Foo name",
        "nameIsLinkedToField": false,
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "changed",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "changed",
}
`;

exports[`EntityEditorReducer scenarios > add new draft, set name, authKey and title, simulate save 4`] = `
{
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": [
    {
      "draft": {
        "authKey": "none",
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": "Foo title",
            "status": "changed",
            "validationErrors": [],
            "value": "Foo title",
          },
        ],
        "name": "Foo name",
        "nameIsLinkedToField": false,
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "changed",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "changed",
}
`;

exports[`EntityEditorReducer scenarios > add new draft, set name, authKey and title, simulate save 5`] = `
{
  "fields": {
    "title": "Foo title",
  },
  "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "info": {
    "authKey": "none",
    "name": "Foo name",
    "type": "Foo",
  },
}
`;

exports[`EntityEditorReducer scenarios > add new draft, set name, authKey and title, simulate save 6`] = `
{
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": [
    {
      "draft": {
        "authKey": "none",
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": "Foo title",
            "status": "changed",
            "validationErrors": [],
            "value": "Foo title",
          },
        ],
        "name": "Foo name",
        "nameIsLinkedToField": false,
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": true,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "changed",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "changed",
}
`;

exports[`EntityEditorReducer scenarios > add new draft, set name, authKey and title, simulate save 7`] = `
{
  "activeEntityEditorScrollSignal": 2,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 2,
  "drafts": [
    {
      "draft": {
        "authKey": "none",
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": "Foo title",
            "status": "",
            "validationErrors": [],
            "value": "Foo title",
          },
        ],
        "name": "Foo name#123456",
        "nameIsLinkedToField": false,
      },
      "entity": {
        "fields": {
          "title": "Foo title",
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": {
          "authKey": "none",
          "createdAt": 2022-04-30T07:51:25.560Z,
          "name": "Foo name#123456",
          "status": "draft",
          "type": "Foo",
          "updatedAt": 2022-04-30T07:51:25.560Z,
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": true,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios > open existing entity, set title field, simulate save 1`] = `
{
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": [
    {
      "draft": {
        "authKey": "none",
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "isName": true,
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "isName": true,
              "name": "title",
              "type": "String",
            },
            "normalizedValue": "Foo title",
            "status": "",
            "validationErrors": [],
            "value": "Foo title",
          },
        ],
        "name": "Foo title#123456",
        "nameIsLinkedToField": true,
      },
      "entity": {
        "fields": {
          "title": "Foo title",
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": {
          "authKey": "none",
          "createdAt": 2022-04-30T07:51:25.560Z,
          "name": "Foo title#123456",
          "status": "draft",
          "type": "Foo",
          "updatedAt": 2022-04-30T07:51:25.560Z,
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "isName": true,
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios > open existing entity, set title field, simulate save 2`] = `
{
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": [
    {
      "draft": {
        "authKey": "none",
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "isName": true,
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "isName": true,
              "name": "title",
              "type": "String",
            },
            "normalizedValue": "New title",
            "status": "changed",
            "validationErrors": [],
            "value": "New title",
          },
        ],
        "name": "New title",
        "nameIsLinkedToField": true,
      },
      "entity": {
        "fields": {
          "title": "Foo title",
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": {
          "authKey": "none",
          "createdAt": 2022-04-30T07:51:25.560Z,
          "name": "Foo title#123456",
          "status": "draft",
          "type": "Foo",
          "updatedAt": 2022-04-30T07:51:25.560Z,
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "changed",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "isName": true,
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "changed",
}
`;

exports[`EntityEditorReducer scenarios > open existing entity, set title field, simulate save 3`] = `
{
  "fields": {
    "title": "New title",
  },
  "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "info": {
    "name": "New title",
    "type": "Foo",
  },
}
`;

exports[`EntityEditorReducer scenarios > open existing entity, set title field, simulate save 4`] = `
{
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": [
    {
      "draft": {
        "authKey": "none",
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "isName": true,
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "isName": true,
              "name": "title",
              "type": "String",
            },
            "normalizedValue": "New title",
            "status": "changed",
            "validationErrors": [],
            "value": "New title",
          },
        ],
        "name": "New title",
        "nameIsLinkedToField": true,
      },
      "entity": {
        "fields": {
          "title": "Foo title",
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": {
          "authKey": "none",
          "createdAt": 2022-04-30T07:51:25.560Z,
          "name": "Foo title#123456",
          "status": "draft",
          "type": "Foo",
          "updatedAt": 2022-04-30T07:51:25.560Z,
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": true,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "changed",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "isName": true,
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "changed",
}
`;

exports[`EntityEditorReducer scenarios > open existing entity, set title field, simulate save 5`] = `
{
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": [
    {
      "draft": {
        "authKey": "none",
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "isName": true,
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "isName": true,
              "name": "title",
              "type": "String",
            },
            "normalizedValue": "New title",
            "status": "",
            "validationErrors": [],
            "value": "New title",
          },
        ],
        "name": "New title#123456",
        "nameIsLinkedToField": true,
      },
      "entity": {
        "fields": {
          "title": "New title",
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": {
          "authKey": "none",
          "createdAt": 2022-04-30T07:51:25.560Z,
          "name": "New title#123456",
          "status": "draft",
          "type": "Foo",
          "updatedAt": 2022-05-01T07:51:25.560Z,
          "version": 1,
        },
      },
      "entityWillBeUpdatedDueToUpsert": true,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "isName": true,
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios > open existing entity, simulate publish 1`] = `
{
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": [
    {
      "draft": {
        "authKey": "none",
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": "Existing title",
            "status": "",
            "validationErrors": [],
            "value": "Existing title",
          },
        ],
        "name": "Foo name#123456",
        "nameIsLinkedToField": false,
      },
      "entity": {
        "fields": {
          "title": "Existing title",
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": {
          "authKey": "none",
          "createdAt": 2022-04-30T07:51:25.560Z,
          "name": "Foo name#123456",
          "status": "draft",
          "type": "Foo",
          "updatedAt": 2022-04-30T07:51:25.560Z,
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios > open existing entity, simulate publish 2`] = `
{
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": [
    {
      "draft": {
        "authKey": "none",
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": "Existing title",
            "status": "",
            "validationErrors": [],
            "value": "Existing title",
          },
        ],
        "name": "Foo name#123456",
        "nameIsLinkedToField": false,
      },
      "entity": {
        "fields": {
          "title": "Existing title",
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": {
          "authKey": "none",
          "createdAt": 2022-04-30T07:51:25.560Z,
          "name": "Foo name#123456",
          "status": "published",
          "type": "Foo",
          "updatedAt": 2022-05-01T07:51:25.560Z,
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios > open existing, get schema 1`] = `
{
  "activeEntityEditorScrollSignal": 0,
  "activeEntityId": null,
  "activeEntityMenuScrollSignal": 0,
  "drafts": [],
  "pendingSchemaActions": [
    AddDraftAction {
      "selector": {
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      },
    },
  ],
  "schema": null,
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios > open existing, get schema 2`] = `
{
  "activeEntityEditorScrollSignal": 0,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 0,
  "drafts": [
    {
      "draft": null,
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "isName": true,
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios > open existing, get schema 3`] = `
{
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": [
    {
      "draft": {
        "authKey": "none",
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "isName": true,
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "isName": true,
              "name": "title",
              "type": "String",
            },
            "normalizedValue": "Foo's title",
            "status": "",
            "validationErrors": [],
            "value": "Foo's title",
          },
        ],
        "name": "Foo's title#123456",
        "nameIsLinkedToField": true,
      },
      "entity": {
        "fields": {
          "title": "Foo's title",
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": {
          "authKey": "none",
          "createdAt": 2022-04-30T07:51:25.560Z,
          "name": "Foo's title#123456",
          "status": "draft",
          "type": "Foo",
          "updatedAt": 2022-04-30T07:51:25.560Z,
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "isName": true,
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios > open first entity, open second entity > 1 Initial 1`] = `
{
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": [
    {
      "draft": {
        "authKey": "none",
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "foo",
              "type": "EntityType",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "name": "foo",
              "type": "EntityType",
            },
            "normalizedValue": {
              "id": "af83fa2d-e05c-49ef-9e31-61e6472c1f28",
            },
            "status": "",
            "validationErrors": [],
            "value": {
              "id": "af83fa2d-e05c-49ef-9e31-61e6472c1f28",
            },
          },
        ],
        "name": "Foo name#123456",
        "nameIsLinkedToField": false,
      },
      "entity": {
        "fields": {
          "foo": {
            "id": "af83fa2d-e05c-49ef-9e31-61e6472c1f28",
          },
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": {
          "authKey": "none",
          "createdAt": 2022-04-30T07:51:25.560Z,
          "name": "Foo name#123456",
          "status": "draft",
          "type": "Foo",
          "updatedAt": 2022-04-30T07:51:25.560Z,
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "foo",
              "type": "EntityType",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios > open first entity, open second entity > 2 After AddDraft 1`] = `
{
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "af83fa2d-e05c-49ef-9e31-61e6472c1f28",
  "activeEntityMenuScrollSignal": 1,
  "drafts": [
    {
      "draft": {
        "authKey": "none",
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "foo",
              "type": "EntityType",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "name": "foo",
              "type": "EntityType",
            },
            "normalizedValue": {
              "id": "af83fa2d-e05c-49ef-9e31-61e6472c1f28",
            },
            "status": "",
            "validationErrors": [],
            "value": {
              "id": "af83fa2d-e05c-49ef-9e31-61e6472c1f28",
            },
          },
        ],
        "name": "Foo name#123456",
        "nameIsLinkedToField": false,
      },
      "entity": {
        "fields": {
          "foo": {
            "id": "af83fa2d-e05c-49ef-9e31-61e6472c1f28",
          },
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": {
          "authKey": "none",
          "createdAt": 2022-04-30T07:51:25.560Z,
          "name": "Foo name#123456",
          "status": "draft",
          "type": "Foo",
          "updatedAt": 2022-04-30T07:51:25.560Z,
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
    {
      "draft": null,
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "af83fa2d-e05c-49ef-9e31-61e6472c1f28",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "foo",
              "type": "EntityType",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios > open first entity, open second entity > 3 After UpdateEntity 1`] = `
{
  "activeEntityEditorScrollSignal": 2,
  "activeEntityId": "af83fa2d-e05c-49ef-9e31-61e6472c1f28",
  "activeEntityMenuScrollSignal": 2,
  "drafts": [
    {
      "draft": {
        "authKey": "none",
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "foo",
              "type": "EntityType",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "name": "foo",
              "type": "EntityType",
            },
            "normalizedValue": {
              "id": "af83fa2d-e05c-49ef-9e31-61e6472c1f28",
            },
            "status": "",
            "validationErrors": [],
            "value": {
              "id": "af83fa2d-e05c-49ef-9e31-61e6472c1f28",
            },
          },
        ],
        "name": "Foo name#123456",
        "nameIsLinkedToField": false,
      },
      "entity": {
        "fields": {
          "foo": {
            "id": "af83fa2d-e05c-49ef-9e31-61e6472c1f28",
          },
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": {
          "authKey": "none",
          "createdAt": 2022-04-30T07:51:25.560Z,
          "name": "Foo name#123456",
          "status": "draft",
          "type": "Foo",
          "updatedAt": 2022-04-30T07:51:25.560Z,
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
    {
      "draft": {
        "authKey": "none",
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "foo",
              "type": "EntityType",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "name": "foo",
              "type": "EntityType",
            },
            "normalizedValue": null,
            "status": "",
            "validationErrors": [],
            "value": null,
          },
        ],
        "name": "Foo 2",
        "nameIsLinkedToField": false,
      },
      "entity": {
        "fields": {
          "foo": null,
        },
        "id": "af83fa2d-e05c-49ef-9e31-61e6472c1f28",
        "info": {
          "authKey": "none",
          "createdAt": 2022-04-30T07:51:25.560Z,
          "name": "Foo 2",
          "status": "draft",
          "type": "Foo",
          "updatedAt": 2022-05-01T07:51:25.560Z,
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "af83fa2d-e05c-49ef-9e31-61e6472c1f28",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "foo",
              "type": "EntityType",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "",
}
`;

exports[`SetActiveEntityAction > add two entities, set active to first 1`] = `
{
  "activeEntityEditorScrollSignal": 3,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 3,
  "drafts": [
    {
      "draft": {
        "authKey": null,
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [],
          "name": "Foo",
        },
        "fields": [],
        "name": "",
        "nameIsLinkedToField": true,
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
    {
      "draft": {
        "authKey": null,
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [],
          "name": "Bar",
        },
        "fields": [],
        "name": "",
        "nameIsLinkedToField": true,
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "9516465b-935a-4cc7-8b97-ccaca81bbe9a",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [],
          "name": "Bar",
        },
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "",
}
`;

exports[`SetAuthKeyAction > set authKey of new draft 1`] = `
{
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": [
    {
      "draft": {
        "authKey": "subject",
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": null,
            "status": "",
            "validationErrors": [],
            "value": null,
          },
        ],
        "name": "",
        "nameIsLinkedToField": true,
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "changed",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "changed",
}
`;

exports[`SetFieldAction > set invalid value (matchPattern) on field of new draft 1`] = `
{
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": [
    {
      "draft": {
        "authKey": null,
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "matchPattern": "foo",
              "name": "string",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "matchPattern": "foo",
              "name": "string",
              "type": "String",
            },
            "normalizedValue": "not-foo",
            "status": "changed",
            "validationErrors": [
              {
                "message": "Value does not match pattern foo",
                "path": [],
                "type": "save",
              },
            ],
            "value": "not-foo",
          },
        ],
        "name": "",
        "nameIsLinkedToField": true,
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": true,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "changed",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {
      "foo": /\\^foo\\$/,
    },
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "matchPattern": "foo",
              "name": "string",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [
        {
          "name": "foo",
          "pattern": "^foo$",
        },
      ],
      "valueTypes": [],
    },
  },
  "status": "changed",
}
`;

exports[`SetFieldAction > set title field of new draft 1`] = `
{
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": [
    {
      "draft": {
        "authKey": null,
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "isName": true,
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "isName": true,
              "name": "title",
              "type": "String",
            },
            "normalizedValue": "New title",
            "status": "changed",
            "validationErrors": [],
            "value": "New title",
          },
        ],
        "name": "New title",
        "nameIsLinkedToField": true,
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "changed",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "isName": true,
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "changed",
}
`;

exports[`SetFieldAction > set title field of new draft after name has been set 1`] = `
{
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": [
    {
      "draft": {
        "authKey": null,
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "isName": true,
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "isName": true,
              "name": "title",
              "type": "String",
            },
            "normalizedValue": "New title",
            "status": "changed",
            "validationErrors": [],
            "value": "New title",
          },
        ],
        "name": "New name",
        "nameIsLinkedToField": false,
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "changed",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "isName": true,
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "changed",
}
`;

exports[`SetNameAction > clearing name of enw draft links to name field 1`] = `
{
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": [
    {
      "draft": {
        "authKey": null,
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "isName": true,
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "isName": true,
              "name": "title",
              "type": "String",
            },
            "normalizedValue": null,
            "status": "",
            "validationErrors": [],
            "value": null,
          },
        ],
        "name": "",
        "nameIsLinkedToField": true,
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "isName": true,
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "",
}
`;

exports[`SetNameAction > set name of new draft 1`] = `
{
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": [
    {
      "draft": {
        "authKey": null,
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": null,
            "status": "",
            "validationErrors": [],
            "value": null,
          },
        ],
        "name": "New name",
        "nameIsLinkedToField": false,
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "changed",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "changed",
}
`;

exports[`UpdateEntityAction > add draft, update entity 1`] = `
{
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": [
    {
      "draft": {
        "authKey": "none",
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "isName": true,
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "isName": true,
              "name": "title",
              "type": "String",
            },
            "normalizedValue": "Foo title",
            "status": "",
            "validationErrors": [],
            "value": "Foo title",
          },
        ],
        "name": "Foo title#123456",
        "nameIsLinkedToField": true,
      },
      "entity": {
        "fields": {
          "title": "Foo title",
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": {
          "authKey": "none",
          "createdAt": 2022-04-30T07:51:25.560Z,
          "name": "Foo title#123456",
          "status": "draft",
          "type": "Foo",
          "updatedAt": 2022-04-30T07:51:25.560Z,
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "isName": true,
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "",
}
`;

exports[`UpdateEntityAction > add draft, update entity 2`] = `
{
  "fields": {
    "title": "Foo title",
  },
  "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "info": {
    "type": "Foo",
  },
}
`;

exports[`UpdateEntityAction > add draft, update entity with unlinked name 1`] = `
{
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": [
    {
      "draft": {
        "authKey": "none",
        "entitySpec": {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "isName": true,
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": [
          {
            "fieldSpec": {
              "isName": true,
              "name": "title",
              "type": "String",
            },
            "normalizedValue": "Foo title",
            "status": "",
            "validationErrors": [],
            "value": "Foo title",
          },
        ],
        "name": "Different name",
        "nameIsLinkedToField": false,
      },
      "entity": {
        "fields": {
          "title": "Foo title",
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": {
          "authKey": "none",
          "createdAt": 2022-04-30T07:51:25.560Z,
          "name": "Different name",
          "status": "draft",
          "type": "Foo",
          "updatedAt": 2022-04-30T07:51:25.560Z,
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": false,
      "hasPublishErrors": false,
      "hasSaveErrors": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "isName": true,
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "",
}
`;

exports[`UpdateSchemaSpecificationAction > add empty schema 1`] = `
{
  "activeEntityEditorScrollSignal": 0,
  "activeEntityId": null,
  "activeEntityMenuScrollSignal": 0,
  "drafts": [],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "status": "",
}
`;
